--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -47,7 +47,7 @@ table {
 /* END RESET STYLESHEET */
 
 header{
-    
+
     padding: 5px;
 }
 header li{
@@ -56,13 +56,13 @@ header li{
 
 
 .box{
-    background-image: url(Cover/img/cover.jpg);
+    background-image: url(../img/cover.jpg);
     background-size: cover;
     background-repeat: no-repeat;
     width:100%  ;
-    height: 600px;  
+    height: 600px;
     background-position-y : -200px;
-    
+
     position:relative;
 
 }
@@ -85,15 +85,15 @@ header li{
     border-radius: 10px;
     opacity: 0.7;
 
-    width: 70%;  
-    margin: auto; 
+    width: 70%;
+    margin: auto;
     padding: 10px;
-    
-    
+
+
 }
 
 .bar .operation, .property, .ubication, button{
-    
+
     display: inline-block;
-    
+
 }
