--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -46,12 +46,82 @@ table {
 
 /* END RESET STYLESHEET */
 
-header{
-
-    padding: 5px;
+header {
+	width: 100%;
+	height: 85px;
+	padding: 0 10%;
+	border-bottom: 1px solid orange;
+	box-sizing: border-box;
 }
-header li{
-    display: inline;
+
+header img {
+	height: 100%;
+	padding: .5%;
+	object-fit: contain;
+	float: left;
+	box-sizing: border-box;
+}
+
+header a[href="cover.html"]:hover img{
+	opacity: 0.7;
+}
+
+header ul {
+	height: 100%;
+	width: 25%;
+	object-fit: contain;
+	box-sizing: border-box;
+}
+
+header .opt1 {
+	float: left;
+	text-align: center;
+}
+
+header .opt2 {
+	float: right;
+	text-align: center;
+}
+
+header ul li {
+	position: relative;
+	margin-top: 20%;
+	padding: .5%;
+  display: inline-block;
+}
+
+header .opt1 li{
+	font-size: 14px;
+	text-transform: capitalize;
+}
+
+header .opt2 li {
+	font-size: 12px;
+}
+
+header ul a {
+	font-family: tahoma;
+	letter-spacing:.1em;
+	color: grey;
+	text-decoration: none;
+}
+
+header .opt2 button {
+	background-color: orange;
+	border: orange solid 0.5px;
+	border-radius: 2px;
+}
+
+header .opt2 button a {
+	color: white;
+}
+
+header .opt1 a:hover {
+	color: orange;
+}
+
+header .opt2 a:hover {
+	opacity: 0.7;
 }
 
 
@@ -62,7 +132,6 @@ header li{
     width:100%  ;
     height: 600px;
     background-position-y : -200px;
-
     position:relative;
 
 }
