--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -46,50 +46,80 @@ table {
 
 /* END RESET STYLESHEET */
 
-
-.box{
-    background-image: url(../img/cover.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width:100%  ;
-    height: 600px;
-    background-position-y : -200px;
-    position:relative;
-		text-align: center;
-
+header {
+	width: 100%;
+	height: 85px;
+	padding: 0 10%;
+	border-bottom: 1px solid orange;
+	box-sizing: border-box;
 }
 
-.slogan{
-    margin: auto;
-    width: 45%;
-		position: relative;
-		top: 10%;
+header img {
+	height: 100%;
+	padding: .5%;
+	object-fit: contain;
+	float: left;
+	box-sizing: border-box;
 }
 
-.slogan h1 {
-    color: white;
-    padding: 1%;
-    text-align: center;
-    font-size: 40px;
-    font-family: helvetica;
+header a[href="cover.html"]:hover img{
+	opacity: 0.7;
 }
 
-.bar{
-
-    background-color:black;
-    border-radius: 10px;
-    opacity: 0.7;
-
-    width: 70%;
-    margin: auto;
-    padding: 10px;
-		position: relative;
-		top: 15%;
-
+header ul {
+	height: 100%;
+	width: 25%;
+	object-fit: contain;
+	box-sizing: border-box;
 }
 
-.bar .operation, .property, .ubication, button{
+header .opt1 {
+	float: left;
+	text-align: center;
+}
 
-    display: inline-block;
+header .opt2 {
+	float: right;
+	text-align: center;
+}
 
+header ul li {
+	position: relative;
+	margin-top: 20%;
+	padding: .5%;
+  display: inline-block;
+}
+
+header .opt1 li{
+	font-size: 14px;
+	text-transform: capitalize;
+}
+
+header .opt2 li {
+	font-size: 12px;
+}
+
+header ul a {
+	font-family: tahoma;
+	letter-spacing:.1em;
+	color: grey;
+	text-decoration: none;
+}
+
+header .opt2 button {
+	background-color: orange;
+	border: orange solid 0.5px;
+	border-radius: 2px;
+}
+
+header .opt2 button a {
+	color: white;
+}
+
+header .opt1 a:hover {
+	color: orange;
+}
+
+header .opt2 a:hover {
+	opacity: 0.7;
 }
