--- a/CSS/search-result.css
+++ b/CSS/search-result.css
@@ -47,9 +47,9 @@ table {
 /* END RESET STYLESHEET */
 
 .browserbox {
-  width: 100%;
+  width: 96%;
   height: 40px;
-  margin-top: 1%;
+	margin: 0 2%;
   background: #f4f4f4;
 }
 
