--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -1,4 +1,4 @@
-header {
+#header {
 	width: 100%;
 	height: 85px;
 	padding: 0 10%;
@@ -6,7 +6,7 @@ header {
 	box-sizing: border-box;
 }
 
-header img {
+#header img {
 	height: 100%;
 	padding: .5%;
 	object-fit: contain;
@@ -14,61 +14,61 @@ header img {
 	box-sizing: border-box;
 }
 
-header a[class="logo"]:hover img{
+#header a[class="logo"]:hover img{
 	opacity: 0.7;
 }
 
-header ul {
+#header ul {
 	height: 100%;
 	width: 25%;
 	object-fit: contain;
 	box-sizing: border-box;
 }
 
-header .opt1 {
+#header .opt1 {
 	float: left;
 	text-align: center;
 }
 
-header .opt2 {
+#header .opt2 {
 	float: right;
 	text-align: center;
 }
 
-header ul li {
+#header ul li {
 	position: relative;
 	margin-top: 20%;
 	padding: .5%;
 	display: inline-block;
 }
 
-header .opt1 li{
+#header .opt1 li{
 	font-size: 14px;
 	text-transform: capitalize;
 }
 
-header .opt2 li {
+#header .opt2 li {
 	font-size: 12px;
 }
 
-header ul a {
+#header ul a {
 	font-family: tahoma;
 	letter-spacing:.1em;
 	color: grey;
 	text-decoration: none;
 }
 
-header .opt2 button {
+#header .opt2 button {
 	background-color: orange;
 	border: orange solid 0.5px;
 	border-radius: 2px;
 	color: white;
 }
 
-header .opt1 a:hover {
+#header .opt1 a:hover {
 	color: orange;
 }
 
-header .opt2 a:hover, button:hover {
+#header .opt2 a:hover, button:hover {
 	opacity: 0.7;
 }
