--- a/CSS/postStyle.css
+++ b/CSS/postStyle.css
@@ -6,9 +6,11 @@
 }
 
 .innerHeader h1 {
+  position: relative;
+  top: 12px;
   color: white;
-  font-size: 20px;
-  font-family: helvetica tahoma;
+  font-size: 16px;
+  font-family: tahoma;
   text-align: center;
 }
 
@@ -26,9 +28,11 @@
 }
 
 .innerHeader2 .location h4 {
+  position: relative;
+  top: 12px;
   color: #737373;
-  font-size: 20px;
-  font-family: helvetica tahoma;
+  font-size: 16px;
+  font-family: tahoma;
   display: inline;
 }
 
@@ -43,15 +47,28 @@
 }
 
 .innerHeader2 .socialMedia ul {
+  float: right;
   object-fit: contain;
+  height: 100%;
+  width: 80%;
 }
 
 .innerHeader2 .socialMedia ul li {
+  float: right;
   display: inline-block;
+  height: 100%;
+  width: 10%;
+  box-sizing: border-box;
+}
+
+.innerHeader2 .socialMedia ul li img {
+  height: 100%;
+  width: 100%;
+  object-fit: contain;
 }
 
 .box {
-  height: 400px;
+  height: 470px;
   width: 100%;
   padding: 0 3%;
   background: #f2f2f2;
@@ -59,10 +76,11 @@
 }
 
 .box .imgbox {
-  width: 50%;
+  margin: 20px 0;
+  width: 60%;
+  height: auto;
   float: left;
   object-fit: contain;
-  border: yellow 2px solid;
   box-sizing: border-box;
 }
 
@@ -73,13 +91,14 @@
 }
 
 .box .contactbox {
-  width: 35%;
+  width: 20%;
   margin: 7.5%;
+  padding: 1%;
   float: right;
   object-fit: contain;
   box-sizing: border-box;
-  border: red 2px solid;
-  text-align: center;
+  background-color: white;
+  font-family: tahoma;
 }
 
 .box .contactbox h2 {
@@ -88,9 +107,73 @@
 
 .box .contactbox form input {
   display: block;
-
+  width: 100%;
+  margin: 0 auto;
 }
 
 .infobox {
+  padding: 1% 10%;
+  width: 60%;
+  box-sizing: border-box;
+  color: grey;
+  font-family: tahoma;
+  font-size: 13px;
+  line-height: 1.5em;
+}
 
+.infobox .mainInfo, .datasheet, .amenities, .description {
+  display: block;
+  width: 100%;
+  margin: 2%;
+}
+
+.infobox .mainInfo {
+  height: 20px;
+}
+
+.infobox .mainInfo ul {
+  object-fit: contain;
+  box-sizing: border-box;
+}
+
+.infobox .mainInfo ul li {
+  width: 20%;
+  display: inline-block;
+}
+
+.subtitlebox {
+  width: 100%;
+  color: #000;
+  font-size: 12px;
+  font-family: tahoma;
+  font-weight: bold;
+  border-bottom: #a6a6a6 1px solid;
+  margin-bottom: 2%;
+}
+
+.infobox .datasheet {
+  width: 100%;
+  object-fit: contain;
+}
+
+.infobox .column {
+  display: inline-block;
+  height: 100%;
+  width: 48%; /*comentario*/
+}
+
+.infobox .datasheet .column ul {
+  object-fit: contain;
+}
+
+.infobox .column ul li {
+   margin-left: 10%;
+}
+
+.infobox .amenities .column li {
+  list-style: url(../img/check.png);
+}
+
+.infobox .description {
+  text-align: justify;
 }
