--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -1,46 +1,83 @@
 .box{
-    background-image: url(../img/cover.jpg);
-    background-size: cover;
-    background-repeat: no-repeat;
-    width:100%  ;
-    height: 600px;
-    background-position-y : -200px;
-    position:relative;
-		text-align: center;
-
+  background-image: url(../img/img.jpg);
+  background-size: cover;
+  background-repeat: no-repeat;
+  width:100%  ;
+  height: 600px;
+  background-position-y : -200px;
+  position: absolute;
+	text-align: center;
 }
 
 .slogan{
-    margin: auto;
-    width: 45%;
-		position: relative;
-		top: 10%;
+  margin: auto;
+  width: 45%;
+	position: relative;
+	top: 15%;
 }
 
 .slogan h1 {
-    color: white;
-    padding: 1%;
-    text-align: center;
-    font-size: 40px;
-    font-family: helvetica;
+  color: white;
+  padding: 1%;
+  text-align: center;
+  font-size: 40px;
+  font-family: helvetica;
+  text-shadow: 2px 2px 10px #000;
+}
+
+.content {
+  height: 12%;
+  width: 70%;
+  margin: auto;
+	position: relative;
+	top: 20%;
+}
+
+.barbackground, .bar {
+  height: 100%;
+  width: 100%;
+  position: absolute;
+}
+
+.barbackground {
+  background-color:black;
+  border-radius: 10px;
+  opacity: 0.7;
 }
 
 .bar{
-
-    background-color:black;
-    border-radius: 10px;
-    opacity: 0.7;
-
-    width: 70%;
-    margin: auto;
-    padding: 10px;
-		position: relative;
-		top: 15%;
-
+  padding: 10px;
+  display: flex;
+  justify-content: space-around;
+  box-sizing: border-box;
+  align-items: baseline;
 }
 
-.bar .operation, .property, .ubication, button{
+.bar .operation, .property, .ubication, .btn{
+  height: 90%;
+}
 
-    display: inline-block;
+.bar option {
+  font: tahoma 20px grey;
+  text-align: center;
+}
 
+.bar .operation {
+  width: 20%;
+}
+
+.bar .property {
+  width: 25%;
+}
+
+.bar .ubication {
+  width: 40%
+}
+
+.bar .btn {
+  background: orange;
+  border: orange solid;
+  padding: 0 2%;
+  color: white;
+  font-size: 18px;
 }
