--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -1,4 +1,6 @@
 #header {
+	display: flex;
+	flex-flow: row nowrap;
 	width: 100%;
 	height: 85px;
 	padding: 0 10%;
@@ -10,7 +12,6 @@
 	height: 100%;
 	padding: .5%;
 	object-fit: contain;
-	float: left;
 	box-sizing: border-box;
 }
 
@@ -18,28 +19,34 @@
 	opacity: 0.7;
 }
 
+#header nav {
+	display: flex;
+	width: 100%;
+	justify-content: space-between;
+	object-fit: contain;
+}
+
 #header ul {
-	height: 100%;
-	width: 25%;
+	height: 30%;
+	width: 50%;
 	object-fit: contain;
 	box-sizing: border-box;
+	display: inline-flex;
+	align-items: center;
+	text-align: center;
+	align-self: flex-end;
 }
 
-#header .opt1 {
-	float: left;
-	text-align: center;
+#header .navs .opt1 {
+	justify-content: flex-start;
 }
 
-#header .opt2 {
-	float: right;
-	text-align: center;
+#header .navs .opt2 {
+	justify-content: flex-end;
 }
 
 #header ul li {
-	position: relative;
-	margin-top: 20%;
-	padding: .5%;
-	display: inline-block;
+	margin: .5%;
 }
 
 #header .opt1 li{
@@ -69,6 +76,6 @@
 	color: orange;
 }
 
-#header .opt2 a:hover, button:hover {
+#header .opt2 a:hover, .opt2 button:hover {
 	opacity: 0.7;
 }
