--- a/CSS/postStyle.css
+++ b/CSS/postStyle.css
@@ -1,5 +1,5 @@
 .innerHeader {
-  widht: 100%;
+  width: 100%;
   height: 40px;
   background:  #737373;
   text-align: center;
@@ -15,6 +15,8 @@
 }
 
 .innerHeader2 {
+  display: flex;
+  justify-content: space-between;
   width: 100%;
   height: 40px;
   padding: 0 3%;
@@ -23,13 +25,11 @@
 }
 
 .innerHeader2 .location {
-  float: left;
+  align-self: center;
   object-fit: contain;
 }
 
 .innerHeader2 .location h4 {
-  position: relative;
-  top: 12px;
   color: #737373;
   font-size: 16px;
   font-family: tahoma;
@@ -41,9 +41,8 @@
 }
 
 .innerHeader2 .socialMedia {
+  align-self: center;
   width: auto;
-  height: inherit;
-  float: right;
 }
 
 .innerHeader2 .socialMedia ul {
@@ -68,19 +67,20 @@
 }
 
 .box {
+  display: flex;
+  justify-content: center;
+  align-content: center;
   height: 470px;
   width: 100%;
   padding: 0 3%;
   background: #f2f2f2;
   box-sizing: border-box;
-  margin: 1% 0;
 }
 
 .box .imgbox {
   margin: 20px 0;
   width: 60%;
   height: auto;
-  float: left;
   object-fit: contain;
   box-sizing: border-box;
 }
@@ -92,24 +92,54 @@
 }
 
 .box .contactbox {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
   width: 20%;
   margin: 7.5%;
   padding: 1%;
-  float: right;
   object-fit: contain;
   box-sizing: border-box;
   background-color: white;
+  border: 1px #f0f0f0 solid;
   font-family: tahoma;
+  text-align: center;
+}
+
+.box .contactbox h2, h4 {
+  height: 10%;
+  color: grey;
 }
 
 .box .contactbox h2 {
-
+  font-size: 13px;
+  font-weight: bold;
 }
 
-.box .contactbox form input {
-  display: block;
+.box .contactbox h4 {
+  font-size: 12px;
+}
+
+.box .contactbox form {
+  height: 70%;
+}
+
+.box .contactbox form input, button {
+  margin: 1% 0;
+  height: 18%;
   width: 100%;
+  box-sizing: border-box;
+}
+
+.box .contactbox form button {
+  width: 80%;
+  position: relative;
   margin: 0 auto;
+  background: orange;
+  border: orange solid;
+  padding: 0 2%;
+  color: white;
+  font-size: 14px;
 }
 
 .infobox {
