--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -1,19 +1,28 @@
 .box{
+   
   background-image: url(../img/img.jpg);
   background-size: cover;
   background-repeat: no-repeat;
-  width:100%  ;
+  /*width:100%  ; */
   height: 600px;
   background-position-y : -200px;
-  position: absolute;
-	text-align: center;
+ /* position: absolute; */
+  /*text-align: center;  */
+  
+  display: flex; /* added*/
+  flex-direction: column; /* added*/
+  justify-content: center; /* added*/
+  align-items: center; /* added*/
 }
 
 .slogan{
-  margin: auto;
+ /* margin: 0 auto; /*  0 added*/
   width: 45%;
-	position: relative;
-	top: 15%;
+  margin: 5%;
+	/*position: relative;*/
+  /*top: 15%;*/
+  
+  
 }
 
 .slogan h1 {
@@ -28,10 +37,10 @@
 .content {
   height: 12%;
   width: 70%;
-  margin: auto;
+  /*margin:0 auto; /*  0 added */
 	position: relative;
-	top: 20%;
-}
+  /*top: 20%; */
+  }
 
 .barbackground, .bar {
   height: 100%;
