--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -1,11 +1,19 @@
 #header {
 	display: flex;
-	flex-flow: row nowrap;
+	flex-flow: row nowrap; 
+	
 	width: 100%;
 	height: 85px;
 	padding: 0 10%;
 	border-bottom: 1px solid orange;
 	box-sizing: border-box;
+
+}
+
+/* 	LOGO	*/
+
+#header .logo{ /*added*/
+	width: 85px; /*maybe is better something different*/
 }
 
 #header img {
@@ -19,24 +27,56 @@
 	opacity: 0.7;
 }
 
+/*	NAV		*/
+
+#header .navs{ /* added*/
+	width: 100%;
+	padding: 1%;  
+	box-sizing: border-box;
+
+	display: flex;
+	flex-flow: row wrap;
+	justify-content: space-between;
+	
+}
+
+
+/*
+.opt1{
+	background: red;
+}
+
+.opt2{
+	background: aqua;
+}
+*/
+
+
+
+/*
 #header nav {
 	display: flex;
 	width: 100%;
 	justify-content: space-between;
-	object-fit: contain;
+	object-fit: contain;  //why?
 }
+*/
+
 
 #header ul {
 	height: 30%;
-	width: 50%;
-	object-fit: contain;
+	/*width: 50%;  
+	object-fit: contain;	
+	text-align: center;*/
 	box-sizing: border-box;
+
 	display: inline-flex;
 	align-items: center;
-	text-align: center;
 	align-self: flex-end;
 }
 
+
+/*
 #header .navs .opt1 {
 	justify-content: flex-start;
 }
@@ -44,18 +84,24 @@
 #header .navs .opt2 {
 	justify-content: flex-end;
 }
+*/
+
 
 #header ul li {
-	margin: .5%;
+	margin: 2%; /*it was .5% before*/
 }
+
 
 #header .opt1 li{
 	font-size: 14px;
 	text-transform: capitalize;
+	
 }
+
 
 #header .opt2 li {
 	font-size: 12px;
+	margin: 10px;
 }
 
 #header ul a {
@@ -64,6 +110,8 @@
 	color: grey;
 	text-decoration: none;
 }
+
+
 
 #header .opt2 button {
 	background-color: orange;
@@ -79,3 +127,15 @@
 #header .opt2 a:hover, .opt2 button:hover {
 	opacity: 0.7;
 }
+
+/*
+@media screen and (max-width: 800px) {
+	#header{
+		flex-flex: column wrap;
+		
+		
+	}
+
+}
+
+*/
