--- a/CSS/search-result.css
+++ b/CSS/search-result.css
@@ -1,15 +1,18 @@
 .browserbox {
-  width: 96%;
+  width: 100%;
   height: 40px;
-	margin: 0 2%;
-  background: #f4f4f4;
+	background: #f4f4f4;
 }
 
 .browserbox .browser {
-  margin: 9px 0 0 9px;
+  margin-top: 9px;
+  margin-left: 2%;
 }
 
 .container {
+  display: flex;  
+  flex-flow: row wrap;
+
   position: relative;
   padding: 2%;
   box-sizing: border-box;
@@ -17,7 +20,9 @@
 }
 
 .container .resultsbox {
-  float: left;
+  display: flex;
+  flex-flow: row wrap;
+
   width: 50%;
   box-sizing: border-box;
 }
@@ -26,7 +31,9 @@
   margin: 1% 0;
   height: 150px;
   width: 100%;
-  border: grey solid 0.5px;
+  background:#eee;
+  border-radius: 5px;
+  font-family: tahoma;
 }
 
 .container .resultsbox .result .imgbox {
@@ -40,6 +47,7 @@
   height: 100%;
   width: 100%;
   object-fit: contain;
+
 }
 
 .container .resultsbox .result .description {
