--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -1,10 +1,12 @@
+
 .box{
-   
-  background-image: url(../img/img.jpg);
+  
+
+  background-image: url(../img/img.jpg); 
   background-size: cover;
   background-repeat: no-repeat;
   /*width:100%  ; */
-  height: 600px;
+  height: 500px;
   background-position-y : -200px;
  /* position: absolute; */
   /*text-align: center;  */
@@ -36,6 +38,7 @@
 }
 
 .content {
+
   height: 12%;
   width: 70%;
   /*margin:0 auto; substitued with align-items*/
@@ -56,11 +59,13 @@
 }
 
 .bar{
-  padding: 10px;
-  display: flex;
-  justify-content: space-around;
+  background: green;
+  padding: 2%;
   box-sizing: border-box;
-  align-items: baseline;
+
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-evenly;
 }
 
 .bar .operation, .property, .ubication, .btn{
@@ -69,10 +74,10 @@
 }
 
 .bar select, input {
-  font: 14px Tahoma;
+  font: 13px Tahoma;
   color: grey;
 }
-
+/*
 .bar .operation {
   width: 20%;
 }
@@ -83,7 +88,7 @@
 
 .bar .ubication {
   width: 40%
-}
+}*/
 
 .bar .btn {
   background: orange;
