--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -10,10 +10,9 @@
 
 }
 
-/* 	LOGO	*/
 
-#header .logo{ /*added*/
-	width: 85px; /*maybe is better something different*/
+#header .logo{
+	width: 85px; /* with contain/auto the box navs positioned to the right till img hover */
 }
 
 #header img {
@@ -29,7 +28,8 @@
 
 /*	NAV		*/
 
-#header .navs{ /* added*/
+#header .navs{
+	
 	width: 100%;
 	padding: 1%;  
 	box-sizing: border-box;
@@ -41,33 +41,10 @@
 }
 
 
-/*
-.opt1{
-	background: red;
-}
-
-.opt2{
-	background: aqua;
-}
-*/
-
-
-
-/*
-#header nav {
-	display: flex;
-	width: 100%;
-	justify-content: space-between;
-	object-fit: contain;  //why?
-}
-*/
 
 
 #header ul {
 	height: 30%;
-	/*width: 50%;  
-	object-fit: contain;	
-	text-align: center;*/
 	box-sizing: border-box;
 
 	display: inline-flex;
@@ -76,19 +53,10 @@
 }
 
 
-/*
-#header .navs .opt1 {
-	justify-content: flex-start;
-}
-
-#header .navs .opt2 {
-	justify-content: flex-end;
-}
-*/
 
 
 #header ul li {
-	margin: 2%; /*it was .5% before*/
+	margin: 2%;
 }
 
 
@@ -128,14 +96,10 @@
 	opacity: 0.7;
 }
 
-/*
+
 @media screen and (max-width: 800px) {
-	#header{
-		flex-flex: column wrap;
-		
-		
+	#header .navs .opt2{
+		display: none;
 	}
 
 }
-
-*/
