almost done search result responsive

--- a/CSS/search-result.css
+++ b/CSS/search-result.css
@@ -34,13 +34,18 @@
   background:#eee;
   border-radius: 5px;
   font-family: tahoma;
+
+  display: flex;
+  flex-flow: row nowrap;  
+  align-items: center;
+  justify-content: center;
 }
 
 .container .resultsbox .result .imgbox {
-  float: left;
   width: 30%;
   height: 150px;
   box-sizing: border-box;
+
 }
 
 .container .resultsbox .result .imgbox img {
@@ -51,12 +56,32 @@
 }
 
 .container .resultsbox .result .description {
-  float: right;
+  
   width: 70%;
-  height: 100%;
   padding: 1%;
   box-sizing: border-box;
+  line-height: 2em;
+
+  padding: 3%;
+  padding-top: 0;
+    
 }
+
+
+.container .resultsbox .result .description h3{
+  font-size: 12px;
+  font-weight: bold;
+}  
+
+
+.container .resultsbox .result .description h2{
+  font-size: 16px;
+  font-weight: bold;
+}  
+
+.container .resultsbox .result .description p{
+  font-size: 14px;
+}  
 
 .container .mapbox {
   float: right;
@@ -70,4 +95,19 @@
   object-fit: fill;
   height: 100%;
   width:100%;
+}
+
+@media screen and (max-width: 800px) {
+	.container .mapbox{
+		display: none;
+  }
+  .container .resultsbox{
+    width: 100%;
+    flex-flow: row wrap;
+  }
+  .container .resultsbox .result{
+    width: 48%;
+ 
+  }
+
 }
