--- a/CSS/postStyle.css
+++ b/CSS/postStyle.css
@@ -68,8 +68,10 @@
 
 .box {
   display: flex;
-  justify-content: center;
+  justify-content: space-around;
   align-content: center;
+
+
   height: 470px;
   width: 100%;
   padding: 0 3%;
@@ -78,6 +80,7 @@
 }
 
 .box .imgbox {
+
   margin: 20px 0;
   width: 60%;
   height: auto;
@@ -92,11 +95,14 @@
 }
 
 .box .contactbox {
+
+  
   display: flex;
   flex-direction: column;
   justify-content: center;
   width: 20%;
-  margin: 7.5%;
+  height: auto;
+  margin: 7.5% 0;
   padding: 1%;
   object-fit: contain;
   box-sizing: border-box;
@@ -143,48 +149,69 @@
 }
 
 .infobox {
-  padding: 1% 10%;
-  width: 60%;
+  padding-top :10px;
   box-sizing: border-box;
+  width: 60%;
   color: grey;
   font-family: tahoma;
   font-size: 13px;
   line-height: 1.5em;
+
+  display: flex;
+  flex-flow: column nowrap;
+  align-items: center;
+
+
 }
 
 .infobox .mainInfo, .datasheet, .amenities, .description {
-  display: block;
-  height: auto;
-  width: 100%;
-  margin: 2%;
+  width: 60%;
+  margin: 2%; 
+  box-sizing:border-box;
 }
 
 .infobox .mainInfo {
+  width: 60%;
   height: 20px;
+  display: flex;
+  justify-content: flex-start;
+
 }
 
 .infobox .mainInfo ul {
-  object-fit: contain;
-  box-sizing: border-box;
+  width: 80%;
+  height: 30px;               
+  display: inline-flex;
+  flex-flow: row nowrap;
+  justify-content: space-between; 
+  align-items: center;
+
 }
 
 .infobox .mainInfo ul li {
-  width: 20%;
-  display: inline-block;
+  background: #ff003b;
+  text-align: center;
+  width: 30px;           /*OJO ACAAAA*/
+  height: 30px;         /*OJO ACAAAA*/
+  line-height: 30px;  /*esto lo centra verticalmente wtf*/
+  border-radius: 50%;
+  color: whitesmoke;
 }
 
-.subtitlebox {
+
+
+
+.infobox .subtitlebox {
   width: 100%;
   color: #000;
   font-size: 12px;
   font-family: tahoma;
   font-weight: bold;
   border-bottom: #a6a6a6 1px solid;
-  margin-bottom: 2%;
+  /*margin-bottom: 2%;*/
 }
 
 .infobox .datasheet {
-  width: 100%;
   object-fit: contain;
 }
 
@@ -208,4 +235,43 @@
 
 .infobox .description {
   text-align: justify;
+}
+
+
+
+@media screen and (max-width: 800px) {
+	.innerHeader2 .socialMedia{
+		display: none;
+  }
+  
+  .box{
+    flex-flow: column nowrap;
+    justify-content: space-between;
+    align-items: center;
+    height: 100%;
+    padding: 3%;
+  }
+
+  .box .imgbox{
+    width: 90%;
+    height: 30%;
+    margin: 0;
+    margin-bottom: 3%;
+  }
+  .box .contactbox{
+    width: 60%;
+    height: 20%;
+    margin: 0;
+  }
+
+  .infobox{
+    margin: auto;
+    width: 90%
+  }
+  .infobox .mainInfo{
+    width: 50%;
+  }
+  .infobox .mainInfo ul {
+    width: 100%;
+  }
 }
