--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -1,16 +1,20 @@
 
 .box{
   background-image: url(../img/img.jpg); 
+  background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width:100%;
   height: 600px;
-  background-position-y : -200px;
+  /*background-position-y : -200px;  maybe not necessary with  background-position:center now*/
+  /*background-position-x : -50px;  to center de paintings */
   
   display: flex;
   flex-direction: column;
   align-items: center;
 }
+
+
 
 .slogan{
   width: 45%;
@@ -93,4 +97,6 @@
   .content { height: 30%; }
   .bar  { flex-flow: column nowrap; padding: 2%; } 
   .bar .innerbox, .bar .ubication, .btn { width: 100%;}
+
+
 }
