--- a/CSS/postStyle.css
+++ b/CSS/postStyle.css
@@ -69,10 +69,10 @@
 .box {
   display: flex;
   justify-content: space-around;
-  align-content: center;
+  align-items: center;
 
 
-  height: 470px;
+  height: 600px;
   width: 100%;
   padding: 0 3%;
   background: #f2f2f2;
@@ -83,9 +83,10 @@
 
   margin: 20px 0;
   width: 60%;
-  height: auto;
+  height: 90%;
   object-fit: contain;
   box-sizing: border-box;
+
 }
 
 .box .imgbox img {
@@ -254,9 +255,15 @@
 
   .box .imgbox{
     width: 90%;
+    
     height: 30%;
     margin: 0;
     margin-bottom: 3%;
+
+  }
+
+  .box .imgbox .mySlides{
+    height: 300px;
   }
   .box .contactbox{
     width: 60%;
@@ -275,3 +282,20 @@
     width: 100%;
   }
 }
+
+
+
+@media screen and (max-width: 400px) {
+  
+  .box .imgbox .mySlides{
+    height: 200px;
+  }
+  .row .columnCarousel {
+    height: 50px;
+  }
+  
+  .box .imgbox .caption-container {
+    font-size: 12px;
+  }
+
+}  
