--- a/flexcarousel.css
+++ b/flexcarousel.css
@@ -5,13 +5,14 @@
 /* Position the image container (needed to position the left and right arrows) */
 .imgbox {
   position: relative;
+  height: 100%;
   
 }
 
 /* Hide the images by default */
 .mySlides {
   display: none;
-  height: 400px;
+  height: 80%;
 }
 
 /* FITS THE IMAGE IN A BOX WITH FIX HEIGHT */
@@ -70,9 +71,15 @@
   background-color: #222;
   padding: 2px 16px;
   color: white;
+
+  font-size: 16px;
 }
+
+
 .row{
-  background: red;
+  display: flex;
+  flex-flow: row nowrap;
+  justify-content: space-around;
 }
 
 .row:after {
@@ -83,10 +90,10 @@
 
 /* Six columns side by side */
 .columnCarousel {
-  float: left;
-  width: 16.66%;
-  height: 50px;                           /*AGREGUE YO*/
-  background: aquamarine;
+  /*float: left;*/
+  width: 100%;
+  height: 100px;                           /*AGREGUE YO*/
+  
 }
 
 .columnCarousel img{
