--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -62,6 +62,7 @@
   margin: .5%;
   height: 90%;
   box-sizing: border-box;
+  cursor: pointer;
 }
 
 .bar .innerbox .operation, .property {
@@ -121,8 +122,8 @@
   box-sizing: border-box;
   display: flex;
   flex-flow: row wrap;
-  align-content: space-between;
-  justify-content: space-between;
+  align-content: space-around;
+  justify-content: space-around;
 }
 
 /* .recomendationbox .recomendedbox .row{
