--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -1,7 +1,7 @@
 #header {
 	display: flex;
-	flex-flow: row nowrap; 
-	
+	flex-flow: row nowrap;
+
 	width: 100%;
 	height: 85px;
 	padding: 0 10%;
@@ -29,15 +29,15 @@
 /*	NAV		*/
 
 #header .navs{
-	
+
 	width: 100%;
-	padding: 1%;  
+	padding: 1%;
 	box-sizing: border-box;
 
 	display: flex;
 	flex-flow: row wrap;
 	justify-content: space-between;
-	
+
 }
 
 
@@ -63,7 +63,7 @@
 #header .opt1 li{
 	font-size: 14px;
 	text-transform: capitalize;
-	
+
 }
 
 
@@ -94,6 +94,7 @@
 
 #header .opt2 a:hover, .opt2 button:hover {
 	opacity: 0.7;
+	cursor: pointer;
 }
 
 
