--- a/CSS/headerstyle.css
+++ b/CSS/headerstyle.css
@@ -97,11 +97,19 @@
 	cursor: pointer;
 }
 
+#footer {
+  width: 100%;
+  height: 100px;
+  background-color: rgb(255, 153, 51);
+}
+
 
 @media screen and (max-width: 800px) {
 	#header .navs .opt2{
 		display: none;
 	}
+
+	#footer {  height: 50px; }
 }
 
 @media screen and (max-width: 400px) {
@@ -109,4 +117,5 @@
 		font-size: 11px;
 		margin: 1%;
 	}
+	
 }
