--- a/CSS/search-result.css
+++ b/CSS/search-result.css
@@ -92,6 +92,7 @@
 .container .resultsbox .result .description p{
   font-size: 12px;
   color: rgb(89, 89, 89);
+  line-height: 1;
 }
 
 .container .mapbox {
