--- a/CSS/coverStyle.css
+++ b/CSS/coverStyle.css
@@ -1,11 +1,15 @@
-
+body{
+  height: 100%;
+  width: 100%;
+}
 .box{
   background-image: url(../img/img.jpg);
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
   width:100%;
-  height: 600px;
+  height: 100%;
+  /* height: 600px; */
   /*background-position-y : -200px;  maybe not necessary with  background-position:center now*/
   /*background-position-x : -50px;  to center de paintings */
 
@@ -18,8 +22,8 @@
 
 .slogan{
   width: 45%;
-  margin-top: 10%;
-  margin-bottom: 2%;
+  margin-top: 15%;
+  margin-bottom: 3%;
 }
 
 .slogan h1 {
@@ -32,15 +36,17 @@
 }
 
 .content {
-  height: 12%;
+  height: 30%;
   width: 70%;
-	position: relative;
+  margin-bottom: 12%;
+  /* padding: 2%; */
+  /* position: relative; */
 }
 
 .bar{
   height: 100%;
   width: 100%;
-  position: absolute;
+  /* position: absolute; */
   background-color: rgba(0,0,0, 0.7);
   border-radius: 10px;
   padding:1%;
@@ -72,22 +78,33 @@
 
 
 .bar select, input {
-  font: 13px Tahoma;
+  font-size: 13px;
+  font-family: Tahoma,Arial, Helvetica;
   color: grey;
+  
 }
 
 .bar .ubication {
-  width: 40%
+  width: 40%;
+  height: 100%;
 }
 
 .bar .btn {
   background: orange;
   border: orange solid;
-  padding: 0 2%;
+  padding: 0.25% 2%;
   color: white;
   font-size: 18px;
   text-align: center;
 }
+
+.operation, .property, .btn{
+  padding: 1%;
+}
+.ubication{
+  padding: 0.5%;
+}
+
 
 .recommendationbox{
   height: 100%;
@@ -114,7 +131,7 @@
 }
 
 .recommendationbox .recommendationHeader h2{
-  font-family: tahoma;
+  font-family: tahoma,Arial, Helvetica;
   font-size: 33px;
   margin: .5%;
   text-align: center;
@@ -134,17 +151,6 @@
   height: 100%;
 }
 
-/* .recomendationbox .recomendedbox .row{
-  margin: 3% 0 0 0;
-  display: flex;
-  flex-flow: row nowrap;
-  justify-content: space-around;
-} */
-
-/* .recomendationbox .recomendedbox .row .recomendedproperty{
-  width: 30%;
-  height: 30%;
-} */
 
 .recommendationbox .recommendedbox .recommendedproperty{
   margin: .5%;
