--- a/CSS/search-result.css
+++ b/CSS/search-result.css
@@ -9,6 +9,14 @@
   margin-left: 2%;
 }
 
+.innerHeader {
+  width: 100%;
+  height: 40px;
+  padding: 10px 20px;
+  font-family: Tahoma,Arial, Helvetica;
+  font-size: 13px;
+}
+
 .container {
   display: flex;
   flex-flow: row wrap;
@@ -85,14 +93,14 @@
 
 
 .container .resultsbox .result .description h2{
-  font-size: 14px;
+  font-size: 15px;
   color: grey;
 }
 
 .container .resultsbox .result .description p{
-  font-size: 12px;
+  font-size: 13px;
   color: rgb(89, 89, 89);
-  line-height: 1;
+  line-height: 1.6em;
 }
 
 .container .mapbox {
